# temporal_demo

./: .dockerignore  Dockerfile  docker-compose.simple.yml  docker-compose.yml  pyproject.toml
backup-temporal_demo.git/: config
langgraph_temporal/: models.py  run_workflow.py  worker.py
langgraph_temporal/activities_agents/: agent.py  prompts.py  tools.py
langgraph_temporal/workflows/: workflow.py
